--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="Keywords" content="爱心代码，程序员表白" />
   <meta name="Description" content="爱心代码，HTML文件，何书悦GitHub爱心代码项目" />
-  <title>I love you</title>
+  <title>For my favorite crab</title>
   <style>
     body { margin: 0; overflow: hidden; background: #000; }
     canvas { position: absolute; width: 100%; height: 100%; }
@@ -262,3 +262,4 @@
   </script>
 </body>
 </html>
+
